--- a/src/Flipkart/Flipfoot.css
+++ b/src/Flipkart/Flipfoot.css
@@ -1,10 +1,10 @@
 .footer1{
     margin-left: 50px;
 }
-li{
+.footer1 li{
     list-style-type: none;
 }
-a{
+.footer1 a{
     text-decoration: none;
     color: black;
 }
